# teRcenHttp

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md
R/: REXPORT.R  main.R  tson.R
src/: Makevars  Makevars.win  REXPORT.c
src/rustlib/: Cargo.toml
src/rustlib/src/: deser.rs  export.rs  lib.rs  multi.rs  ser.rs
