[package]
name = "rustlib"
version = "0.1.0"
authors = ["Alexandre Maurel <alexandre.maurel@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
url="2.1"
rustr = "0.1"
rustson = { git = "https://github.com/tercen/rustson", tag = "0.2.11" }
#rustson = { path = "../../../../rustson"}
rtsonlib = { git = "https://github.com/tercen/rtsonlib", tag = "0.2.11" }
#rtsonlib = { path = "../../../../rtsonlib" }
hyper = "0.12"
hyper-tls = "0.3"
tokio = "0.1"
futures = "0.1"
http = "0.1"
lazy_static = "1.3"

[dependencies.tokio-global]
version = "0.2"
features = ["multi"] #or multi for multithreaded runtim


[lib]
name = "rustlib"
crate-type = ["staticlib","rlib"]
